mutants.out.old/log/src__proto__batch__mod.rs_line_169_col_9.log

*** src/proto/batch/mod.rs:169:9: replace BatchBuilder::build -> Batch with Default::default()

*** mutation diff:
--- src/proto/batch/mod.rs
+++ replace BatchBuilder::build -> Batch with Default::default()
@@ -161,17 +161,17 @@
     /// Create a new `BatchBuilder`.
     pub fn builder() -> BatchBuilder {
         BatchBuilder::new()
     }
 }
 
 impl BatchBuilder {
     fn build(self) -> Batch {
-        self.try_build().expect("There are no required fields.")
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 
     /// Create a new `BatchBuilder` with optional description of the batch.
     pub fn new() -> BatchBuilder {
         Self::create_empty()
     }
 
     /// Batch description for Faktory WEB UI.


*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo build --tests --manifest-path /tmp/cargo-mutants-faktory-rs-jIMFg4.tmp/Cargo.toml --all-features
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-jIMFg4.tmp)
error[E0277]: the trait bound `Batch: Default` is not satisfied
   --> src/proto/batch/mod.rs:169:9
    |
169 |         Default::default() /* ~ changed by cargo-mutants ~ */
    |         ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `Batch`
    |
help: consider annotating `Batch` with `#[derive(Default)]`
    |
132 + #[derive(Default)]
133 | pub struct Batch {
    |

For more information about this error, try `rustc --explain E0277`.
error: could not compile `faktory` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `faktory` (lib test) due to 1 previous error

*** result: Failure(101)
